Background image shown when it is has not to #45901

Closed
opened 2015-08-25 12:19:29 +02:00 by Maksym Tkachenko · 9 comments

System Information
W8, GTX 980

Blender Version
Broken: 2.75a

Short description of error
This problem is an old one. If you have some background image set (in any view) and you press a key on Numpad to get to that view and accidentally press some rotate view key (for example, You press 3 and accidentally (just in a moment after 3) press 6 - while the view is still rotating), you get view change process stopped and the background image set.
Here is a result:
screenshot_374.png

Exact steps for others to reproduce the error
It works with any model and any picture on the background. Just quickly press some VIew key and Rotate view to freeze rotation and get bg shown.

**System Information** W8, GTX 980 **Blender Version** Broken: 2.75a **Short description of error** This problem is an old one. If you have some background image set (in any view) and you press a key on Numpad to get to that view and accidentally press some rotate view key (for example, You press 3 and accidentally (just in a moment after 3) press 6 - while the view is still rotating), you get view change process stopped and the background image set. Here is a result: ![screenshot_374.png](https://archive.blender.org/developer/F227755/screenshot_374.png) **Exact steps for others to reproduce the error** It works with any model and any picture on the background. Just quickly press some VIew key and Rotate view to freeze rotation and get bg shown.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @MaximTkachenko

Added subscriber: @MaximTkachenko

Added subscribers: @JulianEisel, @ideasman42, @Sergey

Added subscribers: @JulianEisel, @ideasman42, @Sergey

Can't really reproduce the issue here on linux.. @ideasman42 or @JulianEisel might be more lucky on this?

@MaximTkachenko, if you'll zoom out or scale windows down (to force viewport redraw) after such configuration will the background image disappear?

Can't really reproduce the issue here on linux.. @ideasman42 or @JulianEisel might be more lucky on this? @MaximTkachenko, if you'll zoom out or scale windows down (to force viewport redraw) after such configuration will the background image disappear?

No, zooming changes nothing. And if my memories does not fail me, the same bug was when I worked on linux. And on another PC.
As I can understand, the bg drawing goes first, and rotating next. So when I stop rotating animation by pressing some key, bg is already on it's place.

No, zooming changes nothing. And if my memories does not fail me, the same bug was when I worked on linux. And on another PC. As I can understand, the bg drawing goes first, and rotating next. So when I stop rotating animation by pressing some key, bg is already on it's place.

It'll help a lot if you can try reproducing the issue on linux with latest builds from builder.blender.org.

Meanwhile let's see if someone else from developers can reproduce the issue.

It'll help a lot if you can try reproducing the issue on linux with latest builds from builder.blender.org. Meanwhile let's see if someone else from developers can reproduce the issue.

Having the same problem with the last build. I can even save it in this state! Catch it)))
028_Eskimo.zip

Having the same problem with the last build. I can even save it in this state! Catch it))) [028_Eskimo.zip](https://archive.blender.org/developer/F227763/028_Eskimo.zip)

This issue was referenced by 2e6cbd9bda

This issue was referenced by 2e6cbd9bda1221036c4ec800d6e6aea35c436965

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45901
No description provided.