Fix T45901: Smooth-view w/ bg-image glitch

It was possible to rotate the view while the view was already moving
causing background images to show when they shouldn't.